# 380Robot

./: .clang-format  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  380Robot_ENGINEERING_SPEC.md  README.md  docker-compose.yml
compose/: docker-compose.yml
docker/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md  PROTOCOL.md  TROUBLESHOOTING.md  TUNING.md
firmware/arduino_mega/: README.md
firmware/arduino_mega/src/: main.ino  new.ino
raw/: CMakeLists.txt  config.h
raw/sim/: good_params.json  optimize.py  simulate.py  track_viz.py
raw/src/: control.cpp  control.h  encoder.cpp  encoder.h  fsm.cpp  fsm.h  main.cpp  serial.cpp  serial.h  shared_state.h
raw/tools/: motor_pid_tune.py
raw/vision/: vision.py
ros2_ws/src/robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/robot_bringup/config/: camera.yaml  control.yaml  fsm.yaml  hw.yaml  vision.yaml
ros2_ws/src/robot_bringup/launch/: bringup_dev.launch.py  bringup_real.launch.py  teleop.launch.py
ros2_ws/src/robot_control_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/robot_control_cpp/src/: line_follow_controller_node.cpp  safety_stop_node.cpp  speed_profile_node.cpp
ros2_ws/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/robot_description/launch/: robot_state_publisher.launch.py
ros2_ws/src/robot_description/rviz/: robot.rviz
ros2_ws/src/robot_description/urdf/: robot.urdf.xacro
ros2_ws/src/robot_fsm_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/robot_fsm_cpp/src/: task_fsm_node.cpp
ros2_ws/src/robot_hw_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/robot_hw_cpp/src/: dummy_hw_node.cpp  serial_bridge_node.cpp
ros2_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/robot_interfaces/msg/: ClawCommand.msg  Detection2D.msg  Detections2D.msg  HwStatus.msg  LineObservation.msg  MotorCommand.msg
ros2_ws/src/robot_interfaces/srv/: SetMode.srv
ros2_ws/src/robot_vision_py/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_vision_py/robot_vision_py/: __init__.py  blue_circle_controller_node.py  dummy_camera_node.py  line_detector_node.py  mjpeg_camera_node.py  object_detector_node.py  teleop_node.py
scripts/: bootstrap.sh  build.sh  camera_mjpeg_server.py  demo.py  detect_monitor.sh  line_follow_view.py  lint.sh  run_demo.sh  start_robot.sh  teleop.sh  test.sh  test_detection.py  test_pickup.py  test_spin180.py
