<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configuration for 380Robot</description>
  <maintainer email="jivan@todo.com">Jivan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_interfaces</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>robot_vision_py</exec_depend>
  <exec_depend>robot_control_cpp</exec_depend>
  <exec_depend>robot_fsm_cpp</exec_depend>
  <exec_depend>robot_hw_cpp</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
